# sqparse

./: .gitignore  Cargo.toml  LICENSE  README.md  _scripttest.gnut
.github/workflows/: build.yml
examples/: dryrun.rs  print_ast.rs  print_ast_script.nut  print_lexer_error.rs  print_lexer_error_script.nut  print_parser_error.rs  print_parser_error_script.nut
sqfmt/: Cargo.toml
sqfmt-lib/: Cargo.toml
sqfmt-lib/src/: comment.rs  config.rs  expression.rs  lib.rs  shared.rs  statement.rs  test_utils.rs  token.rs  writer.rs
sqfmt-lib/src/combinators/: base.rs  formatter.rs  mod.rs  (+2 more)
sqfmt/src/: main.rs
sqparse/: Cargo.toml
sqparse/src/: error_display.rs  flavor.rs  lexer.rs  lexer_error.rs  lib.rs  parse_error.rs  token.rs
src/: error_display.rs  flavor.rs  lib.rs  token.rs
src/annotation/: formats.rs  gutter.rs  line_printer.rs  mod.rs  mode.rs  repeat.rs
src/ast/: array.rs  class.rs  control.rs  enum_.rs  expression.rs  function.rs  global.rs  identifier.rs  list.rs  mod.rs  operator.rs  precedence.rs  slot.rs  statement.rs  struct_.rs  table.rs  type_.rs  variable.rs
src/error_display/: formats.rs  gutter.rs  line_printer.rs  mod.rs
src/lexer/: comment.rs  error.rs  identifier.rs  literal.rs  mod.rs  parse_str.rs  symbol.rs  token_iter.rs
src/parser/: array.rs  class.rs  combinator.rs  context.rs  control.rs  enum_.rs  error.rs  expression.rs  function.rs  global.rs  identifier.rs  list.rs  mod.rs  operator.rs  parse_result_ext.rs  slot.rs  statement.rs  struct_.rs  table.rs  token.rs  token_list.rs  token_list_ext.rs  type_.rs  variable.rs
(+10 files in other folders)
