[package]
name = "sqparse"
version = "0.1.0"
edition = "2021"
description = "Parser for the Squirrel language."
keywords = ["squirrel", "parser"]
homepage = "https://github.com/cpdt/sqparse"
repository = "https://github.com/cpdt/sqparse"
license = "MIT"

[dependencies]
lexical = { version = "6.1", features = ["power-of-two"] }
lazy_static = "1.4"
