[package]
name = "sqparse"
version = "0.3.0"
edition = "2021"
description = "Squirrel3 and Squirrel_re parser."
keywords = ["squirrel", "parser"]
homepage = "https://github.com/cpdt/sqparse"
repository = "https://github.com/cpdt/sqparse"
license = "MIT"

[dependencies]
lexical = { version = "6.1", features = ["power-of-two"] }
lazy_static = "1.4"
yansi = "0.5"
